--- a/nextjs-tourism-app/package.json
+++ b/nextjs-tourism-app/package.json
@@ -1,36 +1,29 @@
 {
   "name": "nextjs-tourism-app",
-  "version": "1.0.0",
-  "description": "A tourism-based application that helps users find transportation, hotels, and tourist spots based on their preferences.",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "next lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
-    "axios": "^0.21.1",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-redux": "^7.2.9",
-    "redux": "^4.1.0"
+    "@types/react-redux": "^7.1.34",
+    "axios": "^1.11.0",
+    "next": "15.4.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@types/node": "24.1.0",
-    "@types/react-redux": "^7.1.34",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "latest",
-    "typescript": "^4.4.3"
-  },
-  "keywords": [
-    "tourism",
-    "nextjs",
-    "redux",
-    "travel"
-  ],
-  "author": "Your Name",
-  "license": "MIT"
+    "@tailwindcss/postcss": "^4",
+    "@types/axios": "^0.9.36",
+    "@types/node": "20.19.9",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^4",
+    "typescript": "5.8.3"
+  }
 }
