chore: update .gitignore to include additional environment and Python-related files

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
 .next/
 out/
 node_modules/
+.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .DS_Store
+*/model/gemma/*
+
+# Python-related files
+__pycache__/
+*.py[cod]
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+*.pyo
+*.pyd
+*.whl
+*.log
+*.pot
+*.mo
+*.coverage
+.coverage.*
+.cache/
+*.pytest_cache/
+htmlcov/
+.mypy_cache/
+.dmypy.json
+.pyre/
+.pytype/
