--- a/nextjs-tourism-app/package.json
+++ b/nextjs-tourism-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.11.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/axios": "^0.9.36",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "20.19.9",
     "@types/react": "19.1.9",
     "@types/react-dom": "^19",
