--- a/nextjs-tourism-app/package.json
+++ b/nextjs-tourism-app/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.11.0",
+    "firebase": "^12.0.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/axios": "^0.9.36",
+    "@types/firebase": "^2.4.32",
     "@types/google.maps": "^3.58.1",
     "@types/node": "20.19.9",
     "@types/react": "19.1.9",
